# zsdatab

./: .gitmodules  CMakeLists.txt  FindZsdatable.cmake.in  LICENSE  README.md  config.h.in  entry.cxx  zsdatable  zsdatable.hpp
cmake/: CMakeLists.txt  FindZSdatab.cmake.in  ZSdatabConfig.cmake  ZSdatabConfig.cmake.in
include/: config.h.in  zsdatable.hpp
lib/: buffer.cxx  fixcol_proxy.cxx  join.cxx  map.cxx  metadata.cxx  operators.cxx  pool.cxx  pool.hpp  transaction.cxx
lib/context/: common.cxx  main.cxx  operators.cxx  wrappers.cxx
lib/table/: common.cxx  common.hpp  filter.cxx  gz.cxx  main.cxx  misc.cxx  operators.cxx  packed.cxx  packed.hpp
src/: context.cxx  context_common.cxx  entry.cxx  join.cxx  map.cxx  metadata.cxx  operators.cxx  table.cxx  transaction.cxx  zsdatable.hpp
src/context/: common.cxx  main.cxx  operators.cxx  wrappers.cxx
src/table/: common.cxx  common.hpp  filter.cxx  gz.cxx  main.cxx  packed.cxx  packed.hpp
